fixed logo visiblity in navbar

--- a/frontend/css/components/navbar.css
+++ b/frontend/css/components/navbar.css
@@ -232,7 +232,8 @@ body {
   left: 0;
   width: 90px;
   position: relative;
-  overflow: hidden;
+      margin-bottom: 25px !important;
+    margin-top: 0px !important;
 }
 
 .logo-img {
